Fixes to support typing on mobile device

--- a/src/components/header/modals.style.module.css
+++ b/src/components/header/modals.style.module.css
@@ -4,6 +4,7 @@
   color: var(--text-2);
   background: var(--bg-2);
   border-radius: 20px;
+  width: 100%;
 }
 
 .container h3 {
@@ -21,8 +22,8 @@
   display: flex;
   flex-direction: column;
   overflow: scroll;
-  max-height: 75dvh;
-  max-height: 75vh;
+  height: 70dvh;
+  height: 70vh;
 }
 
 .leaderBoardResult {
@@ -83,5 +84,11 @@ select {
 }
 
 @media screen and (max-width: 48rem) {
-
+  .container {
+    padding: 1rem;
+    padding-top: 1.5rem;
+  }
+  .modalHeader button {
+    font-size: 1.5rem;
+  }
 }
