--- a/src/components/typingArea/style.module.css
+++ b/src/components/typingArea/style.module.css
@@ -17,12 +17,16 @@
   width: 85%;
 }
 
-.container:focus {
+.container:focus-within {
   box-shadow: 0px 0px 5px 0px var(--text-1);
   border: none;
 }
 
-.container:not(.container:focus)::before {
+.container input {
+  color:  red;
+}
+
+.container:not(.container:focus-within)::before {
   content: '< Click here to start typing >';
   color: var(--text-2);
   font-weight: 500;
@@ -75,6 +79,11 @@
   padding: 0.25rem 1rem;
   font-size: 1.25rem;
   color: var(--accent);
+}
+
+.type-fast-typing-area-input-ref {
+  opacity: 0;
+  position: absolute;
 }
 
 @media screen and (max-width: 48rem) {
