--- a/src/components/typingResult/style.module.css
+++ b/src/components/typingResult/style.module.css
@@ -62,6 +62,9 @@
 
 .statItem {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  height: 4rem;
 }
 
 .statsScore {
@@ -74,4 +77,35 @@
   color: var(--text-1);
   font-size: 0.9rem;
   padding-left: 4px;
+}
+
+@media screen and (max-width: 48rem) {
+  .stats {
+    width: 90%;
+  }
+  .statsScore {
+    font-size: 2.8rem;
+  }
+  .statsTitle {
+    font-size: 0.7rem;
+  }
+  .chartWrapper {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 24rem) {
+  .stats {
+    width: 90%;
+    gap: 0.7rem;
+  }
+  .statsScore {
+    font-size: 2.4rem;
+  }
+  .statsTitle {
+    font-size: 0.7rem;
+  }
+  .chartWrapper {
+    width: 75%;
+  }
 }
